deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-tutorial-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-tutorial-web
  template:
    metadata:
      labels:
        app: django-tutorial-web
    spec:
      containers:
      - name: django-tutorial-web
        image: javierasping/django_tutorial_ic
        ports:
        - containerPort: 3000
