deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-django
  template:
    metadata:
      labels:
        app: mariadb-django
    spec:
      containers:
      - name: mariadb-django
        image: mariadb
        volumeMounts:
        - name: mariadb-django-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-django-volume
        persistentVolumeClaim:
          claimName: mariadb-django-pvc
