srv-django-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-tutorial-web-service
spec:
  selector:
    app: django-tutorial-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
