srv-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-django
spec:
  selector:
    app: mariadb-django
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
