ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: djangodocker.javiercd.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-tutorial-web-service
            port:
              number: 80
